[workspace]
[package]
version = "0.1.0"
name = "sp1-eth-get-proof-verifier-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
alloy-primitives = { version = "0.8.0", default-features = false }
alloy-trie = { version = "0.5.0", default-features = false }
alloy-rlp = "0.3.8"
alloy-rpc-types-eth = { version = "0.3.6", default-features = false, features = ["serde"] }
serde = "1.0.210"
serde_json = "1.0.128"
